--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -75,8 +75,9 @@ repos:
   - repo: local
     hooks:
       - id: pytest
+        stages: [manual]
         name: pytest
-        entry: ./venv/bin/pytest tests
+        entry: pytest tests
         language: system
         types: [python]
         pass_filenames: false
