--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: pre-commit/action@v3.0.0
+      - uses: pre-commit/action@latest
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Install pytest
